# geomapi

./: .buildinfo  .coveragerc  .gitignore  CHANGELOG.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree
_static/: style.css
development/: environment creation.html  ontology creation.html  packaging.html  testcase creation.html
docs/: docs_requirements.txt
examples/: 1_img_label_production2.ipynb  Code_audit.ipynb  Example_Reading_VLX-data.ipynb  Example_Volume_Calculation.ipynb  Example_bim_to_graph.ipynb  Example_bim_to_graph_road_version.ipynb  Example_bimnodes.ipynb  Example_bridge_read_excell.ipynb  Example_cloudcompare.ipynb  Example_collisions.ipynb  Example_collosseum_0_PCD_subdivision.ipynb  Example_collosseum_0_RDF_creation.ipynb  Example_collosseum_1_BIM_mapping.ipynb  Example_collosseum_2_training_data_creation.ipynb  Example_collosseum_3_transfer_learning.ipynb  Example_collosseum_4_image_classification.ipynb  Example_collosseum_5_backproject_img_results copy.ipynb  Example_collosseum_5_backproject_img_results.ipynb  Example_crop_geometry.ipynb  Example_cuda.ipynb  Example_e57_to_tiles.ipynb  Example_edge_detection.ipynb  Example_geometrynodes.ipynb  Example_get_inliers.ipynb  Example_graph_to_bim.ipynb  Example_graph_to_img.ipynb  Example_graph_to_mesh.ipynb  Example_graph_to_pcd.ipynb  Example_graph_to_session.ipynb  Example_graphs_1.ipynb  Example_img_to_graph.ipynb  Example_img_to_graph_xml.ipynb  Example_nodes.ipynb  (+36 more)
(+350 files in other folders)
