[metadata]
name =geomapi
version = 0.3.5
author = Bassier M., De Geyter S., De Winter H., Vermandere J. @ Geomatics KU Leuven
description = A standard library to manage geomatic data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ku-leuven-geomatics.github.io/geomapi/index.html
keywords = Geomatics, alignment, monitoring, validation, progress, point clouds, computer vision, deep learning
License = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = <=3.11
install_requires =
    open3d
    opencv-python
    pye57
    numpy
    numpy-quaternion
    rdflib
    typing_extensions
    matplotlib
    ifcopenshell
    scipy
    Pillow
    XlsxWriter
    trimesh
    python-fcl
    pandas
    lark
    colour
    laspy
    lazrs
    scikit-learn
    ezdxf
    pyvista
    shapely
